# nadesiko4

./: .gitignore  AGENTS.md  Cargo.toml  README.md  hello.nako4
src/: ast.rs  ast_to_bytecode.rs  ast_to_vmcode.rs  bytecode.rs  char_type.rs  lexer.rs  lib.rs  main.rs  parser.rs  source.rs  token.rs  value.rs  vm.rs  vmcode.rs
tests/: vm_test.rs
